--- a/vision-transformers-in-pytorch-deit.ipynb
+++ b/vision-transformers-in-pytorch-deit.ipynb
@@ -23,10 +23,8 @@
    "source": [
     "##### Vision Transformers\n",
     "\n",
-    "This notebook trains a  Vision Transformer on the Butterfly dataset.\n",
+    "This notebook trains a Vision Transformer on the Butterfly dataset from kaggle and is edit from this notebook below, this resulted in 96% on test dataset while in original test result have achieved only 91% https://www.kaggle.com/code/pdochannel/vision-transformers-in-pytorch-deit\n",
     "\n",
-    "Code for the following video:\n",
-    "https://youtu.be/0tjuRnkFHKg"
    ]
   },
   {
